data/derived/sp14/progs/unify/prog4417.ml.out
Characters 107-123:
  ((i+j+s)/10, t::((i+j+s) mod 10)) in
                  ^^^^^^^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
